--- a/templates/profile.html
+++ b/templates/profile.html
@@ -681,9 +681,17 @@
               </button>
               <button
                 class="btn btn-secondary"
-                onclick="location.href='/createplaylist'"
+                onclick="alert('Feature coming soon!')"
               >
-                Create Playlist
+              <img style="width: 25px; margin-right: 8px;" src="https://images.icon-icons.com/3106/PNG/96/person_avatar_account_user_icon_191606.png">
+                      Friends
+                      </button>
+              <button
+                class="btn btn-secondary"
+                onclick="alert('Feature coming soon!')"
+              >
+              <img style="width: 25px; margin-right: 8px;" src="https://images.icon-icons.com/2159/PNG/96/envelope_email_mail_icon_132952.png"><gap></gap>
+                Messages
               </button>
             </div>
           </div>
