--- a/templates/profile.html
+++ b/templates/profile.html
@@ -713,6 +713,15 @@
 
           <div class="card">
             <h3>🏆 Stats</h3>
+            <p
+              style="
+                color: var(--text-secondary);
+                margin-bottom: 1rem;
+                font-size: 0.9rem;
+              "
+            >
+              Simple stats currently, more to come!
+            </p>
             <canvas id="bookPieChart"></canvas>
           </div>
         </aside>
