--- a/templates/profile.html
+++ b/templates/profile.html
@@ -813,6 +813,7 @@
                     class="btn generate-playlist-btn" 
                     data-author="{{book.author}}" 
                     data-title="{{book.title}}"
+                    data-cover="{{book.cover_url}}"
                 >
                     Generate Playlist
                 </button>
