added about and roadmap

--- a/templates/about.html
+++ b/templates/about.html
@@ -481,11 +481,9 @@
           </p>
           <br />
           <p>
-            Match the perfect sound to your story. We build intelligent,
-            personalized reading playlists on Spotify that adapt to your chosen
-            book's genre, your current mood, and even your reading tempo. It's
-            more than background noise—it's a truly enhanced reading experience.
+            Find out more about Cadence and upcoming features on our roadmap
           </p>
+          <a href="/roadmap">Roadmap</a>
         </div>
       </div>
     </div>
